Fix overlapping of the sidenav

--- a/room-manager-webapp/room-manager-gui/src/app/home-module/home-component/navbar-component/navbar.component.css
+++ b/room-manager-webapp/room-manager-gui/src/app/home-module/home-component/navbar-component/navbar.component.css
@@ -5,3 +5,9 @@
 .home-icon {
     height: 100%;
 }
+
+.menu-icon {
+    position:absolute;
+    right:0;
+    margin-right: 1%;
+}
